--- a/drivers/gpu/drm/hisilicon/Kconfig
+++ b/drivers/gpu/drm/hisilicon/Kconfig
@@ -19,7 +19,7 @@ config DRM_HISI_FBDEV
 	select FB_SYS_COPYAREA
 	select FB_SYS_IMAGEBLIT
 	select FB_SYS_FOPS
-	default n
+	default y
 	help
 	  Choose this option if you have a need for the legacy fbdev support.
 	  Note that this support also provides the Linux console on top of
