driver: mailbox: add support for hi3660
Add mailbox driver for Hi3660.

Signed-off-by: Leo Yan <leo.yan@linaro.org>

--- a/drivers/mailbox/Kconfig
+++ b/drivers/mailbox/Kconfig
@@ -86,6 +86,12 @@ config HI6220_MBOX
 	  between application processors and MCU. Say Y here if you want to build
 	  the Hi6220 mailbox controller driver.
 
+config HI3660_MBOX
+	tristate "Hi3660 Mailbox"
+	depends on ARCH_HISI
+	help
+	  Mailbox implementation for Hi3660.
+
 config MAILBOX_TEST
 	tristate "Mailbox Test Client"
 	depends on OF
