--- a/arch/arm64/configs/hikey960_defconfig
+++ b/arch/arm64/configs/hikey960_defconfig
@@ -66,8 +66,15 @@ CONFIG_PM_AUTOSLEEP=y
 CONFIG_PM_WAKELOCKS=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_ARM_CPUIDLE=y
+CONFIG_CPU_IDLE_MULTIPLE_DRIVERS=y
+CONFIG_CPU_IDLE_GOV_LADDER=y
+CONFIG_CPU_IDLE_GOV_MENU=y
+CONFIG_DT_IDLE_STATES=y
+CONFIG_ARM_HISI_CPUIDLE=y
 CONFIG_CPU_FREQ=y
-CONFIG_CPU_FREQ_DEFAULT_GOV_SCHED=y
+CONFIG_CPU_FREQ_GOV_COMMON=y
+CONFIG_CPU_FREQ_STAT=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
@@ -461,9 +468,12 @@ CONFIG_FIQ_DEBUGGER_CONSOLE=y
 CONFIG_FIQ_DEBUGGER_CONSOLE_DEFAULT_ENABLE=y
 CONFIG_FIQ_DEBUGGER_UART_OVERLAY=y
 CONFIG_HISI_FIQ_DEBUGGER=y
+CONFIG_COMMON_CLK_HI3660=y
+CONFIG_STUB_CLK_HI3660=y
 CONFIG_STUB_CLK_HI6220=y
 CONFIG_MAILBOX=y
 CONFIG_HI6220_MBOX=y
+CONFIG_HI3660_MBOX=y
 CONFIG_HISI_IOMMU_LPAE=y
 CONFIG_RESET_CONTROLLER=y
 CONFIG_COMMON_RESET_HI6220=y
