--- a/arch/arm64/configs/hikey960_defconfig
+++ b/arch/arm64/configs/hikey960_defconfig
@@ -477,7 +477,30 @@ CONFIG_HI3660_MBOX=y
 CONFIG_HISI_IOMMU_LPAE=y
 CONFIG_RESET_CONTROLLER=y
 CONFIG_COMMON_RESET_HI6220=y
+#
+# ARM GPU Configuration
+#
 CONFIG_MALI_MIDGARD=y
+# CONFIG_MALI_GATOR_SUPPORT is not set
+CONFIG_MALI_MIDGARD_DVFS=y
+# CONFIG_MALI_MIDGARD_RT_PM is not set
+# CONFIG_MALI_MIDGARD_ENABLE_TRACE is not set
+# CONFIG_MALI_MIDGARD_DEBUG_SYS is not set
+# CONFIG_MALI_DEVFREQ is not set
+CONFIG_MALI_EXPERT=y
+# CONFIG_MALI_DEBUG_SHADER_SPLIT_FS is not set
+CONFIG_MALI_PLATFORM_FAKE=y
+CONFIG_MALI_PLATFORM_HISILICON=y
+# CONFIG_MALI_DEBUG is not set
+# CONFIG_MALI_NO_MALI is not set
+# CONFIG_MALI_TRACE_TIMELINE is not set
+# CONFIG_MALI_SYSTEM_TRACE is not set
+# CONFIG_MALI_PM_DEMAND is not set
+CONFIG_REPORT_VSYNC=y
+CONFIG_MALI_IDLE_AUTO_CLK_DIV=y
+# CONFIG_MALI_DMA_FENCE is not set
+# CONFIG_MALI_PRFCNT_SET_SECONDARY is not set
+# CONFIG_FMC is not set
 CONFIG_PHY_HI6220_USB=y
 CONFIG_PHY_XGENE=y
 CONFIG_ANDROID=y
